force-app/main/default/objects/ESS_Retirement__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Year__c</fullName>
        <formula>Year(DATEVALUE(CreatedDate))</formula>
        <label>Created Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Retirement_Date__c</fullName>
        <label>Default Retirement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Head_Approve_Date__c</fullName>
        <label>Department Head Approve Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Head_Employee_Id__c</fullName>
        <label>Department Head Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Head_Id__c</fullName>
        <label>Department Head Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Head_Position_TH__c</fullName>
        <label>Department Head Position TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Head_Position__c</fullName>
        <label>Department Head Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Head_Reminder__c</fullName>
        <label>Department Head Reminder</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Department_Head_TH__c</fullName>
        <label>Department Head TH</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Head__c</fullName>
        <label>Department Head</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_No__c</fullName>
        <label>Document No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name_TH__c</fullName>
        <label>Employee Name TH</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Title__c</fullName>
        <label>Employee Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Reminder__c</fullName>
        <label>First Reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_JSON__c</fullName>
        <label>History JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reminder__c</fullName>
        <label>Other Reminder</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject_Date__c</fullName>
        <label>Reject Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retirement_Choice__c</fullName>
        <label>Retirement Choice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ExactDateFor55Years</fullName>
                    <label>ในวันครบอายุ 55 ปีบริบูรณ์</label>
                </value>
                <value>
                    <fullName>ExactDateFor60Years</fullName>
                    <label>ในวันครบอายุ 60 ปีบริบูรณ์</label>
                </value>
                <value>
                    <fullName>EndOfMonth</fullName>
                    <label>ในวันสุดท้ายของเดือนที่ครบอายุเกษียณ</label>
                </value>
                <value>
                    <fullName>EndOfYear</fullName>
                    <label>ในวันสิ้นปีที่ครบอายุเกษียณ</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retirement_Date__c</fullName>
        <label>Retirement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_JSON__c</fullName>
        <label>SAP JSON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Head_Approve_Date__c</fullName>
        <label>Section Head Approve Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Section_Head_Employee_Id__c</fullName>
        <label>Section Head Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Head_Flow__c</fullName>
        <formula>IF(Section_Head_Id__c != null, false, true)</formula>
        <label>Section Head Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_Head_Id__c</fullName>
        <label>Section Head Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Head_Position_TH__c</fullName>
        <label>Section Head Position TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Head_Position__c</fullName>
        <label>Section Head Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Head_Reminder__c</fullName>
        <label>Section Head Reminder</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section_Head_TH__c</fullName>
        <label>Section Head TH</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Head__c</fullName>
        <label>Section Head</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sending_To_SAP_Date__c</fullName>
        <label>Sending To SAP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>WaitingEmployeeSubmit</fullName>
                </value>
                <value>
                    <fullName>WaitingForApprovalSectionHead</fullName>
                </value>
                <value>
                    <fullName>WaitingForApprovalDepartmentHead</fullName>
                </value>
                <value>
                    <fullName>UploadingToPersonalFolder</fullName>
                </value>
                <value>
                    <fullName>SendingToSAP</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>DefaultFromSystem</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                    <label>Error updated in SAP</label>
                </value>
                <value>
                    <fullName>UploadFailed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_To_Personal_Folder_Date__c</fullName>
        <label>Upload To Personal Folder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Uploaded_Status__c</fullName>
        <label>Uploaded Status</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>ESS Retirement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RET-{00000}</displayFormat>
        <label>ESS Retirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>